# Gpufit

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
Cpufit/: lm_fit_cpp.cpp
Gpufit/: CMakeLists.txt  constants.h  gpu_data.cu  lm_fit_cuda.cu
Gpufit/matlab/: ModelID.m
Gpufit/models/: T1_fa_fit.cuh  exponential.cuh  models.cuh
Gpufit/tests/: CMakeLists.txt
examples/c++/: CMakeLists.txt  Dixon_Fitting.cpp  T1_FA_Exponential_Fitting.cpp
examples/c++/gpu_vs_cpu_profiling/: Gpufit_Cpufit_Patlak.cpp
package/: README.md  create_package.sh  documentation_create_latex.sh
